--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </p>
         <img src="./adventure.jpg" alt="nasedjelatnosti" />
       </section>
-      <form action="#" method="get">
+      <section>
         <h2 id="kontakt">Kontakt</h2>
         <br />
         <p>
@@ -76,7 +76,7 @@
           recusandae magnam ratione.
         </p>
         <br />
-
+      <form action="#" method="get"></form>
         <label for="flname">Ime i prezime</label><br />
         <input type="text" name="flname" id="flname" /> <br />
         <label for="e-mail">E-mail</label><br />
@@ -85,6 +85,7 @@
         <textarea name="msg" id="msg" cols="30" rows="10"></textarea><br />
         <button type="button">Pošalji poruku</button>
       </form>
+      </section>
       <hr />
     </main>
     <footer>
