--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section>
         <h2 id="onama">O nama</h2>
         <p>
-          trapLorem ipsum, dolor sit amet consectetur adipisicing elit. Aut eos
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut eos
           pariatur ea officiis <br />
           consequatur quod iure? Ab veniam dolores iure ea distinctio quam optio
           modi dignissimos <br />
@@ -60,7 +60,6 @@
       </section>
       <section>
         <h2 id="kontakt">Kontakt</h2>
-        <br />
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, vitae.
           Quaerat, recusandae omnis. Culpa, doloremque labore animi corrupti et
